force-app/main/default/objects/Contact_Application_Association__c/Contact_Application_Association__c.object-meta.xml
<CustomObject>
    <label>Contact-Application Association</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Contact-Application Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact-Application Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>