force-app/main/default/objects/Contact_Application_Association__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account relationship to this object is look up.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact-Application Associations</relationshipLabel>
    <relationshipName>Contact_Application_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>